# SolarMED

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  README.md  RS_one_MINLP_pygmo.ipynb  RS_one_complete_problem.ipynb  SolarMED.code-workspace  changelog.md  debugging.ipynb  debugging2.ipynb  dev.ipynb  docker-compose.yml  environment.yml  episode_report.ipynb  evaluate_combined_model.ipynb  example.ipynb  finite_state_machine.ipynb  genetic.pkl  med_operation_points_processing.ipynb  new_environment.yml  operating_modes_diagrams.ipynb  path_explorer_MED.ipynb  path_explorer_SFTS.ipynb  path_explorer_complete.ipynb  pyproject.toml  recursitron.py  requirements.txt  results_visualization.py  setup.py  solarMED_validation_report.ipynb  state_evolution_viz.ipynb  test_combined_model.ipynb  test_combined_model.py  test_combined_model2.ipynb  test_individual_models.py  visualize_test.ipynb
data/: dev.csv  (+9 more)
modeling/: .gitignore  LICENSE  README.md  pyproject.toml
modeling/MED_model_installers/linux_python311_for_redistribution_files_only/: setup.py
modeling/data/: curve_fits.json  med_gpr_data.npy  plot_config.hjson  plt_config_heat_exchanger.json  plt_config_med.json  plt_config_solar_field.json  plt_config_thermal_storage.json  plt_config_thermal_storage_test_viz.json  variables_config.hjson
modeling/data/datasets/: 20231030_MED.csv  med_2022_2024_exp_campaign_operation_points.csv  med_brine_pump_consumption.csv  med_cooling_and_feedwater_pumps_consumption.csv  med_distillate_pump_consumption.csv  med_exp_campaigns_operation_points.csv  med_heat_source_pump_consumption.csv  operation_points_v2.csv
modeling/data/old/: base_environment_data.csv
modeling/docs/: Import data.md  Validation signals list.md
modeling/docs/.obsidian/: core-plugins.json  starred.json  workspace (Copia en conflicto de Patricia Palenzuela 2023-03-17 2).json  workspace (Copia en conflicto de Patricia Palenzuela 2023-03-17 3).json  workspace (Copia en conflicto de Patricia Palenzuela 2023-03-18 1).json  workspace (Copia en conflicto de Patricia Palenzuela 2023-03-18 2).json  workspace (Copia en conflicto de Patricia Palenzuela 2023-03-20).json  workspace (Juan Miguel Serrano's conflicted copy 2022-05-16)  workspace (Juan Miguel Serrano's conflicted copy 2022-05-17)  workspace (Juan Miguel Serrano's conflicted copy 2022-05-30)  workspace (Juan Miguel Serrano's conflicted copy 2023-03-17).json  workspace (Juan Miguel Serrano's conflicted copy 2023-03-21).json  workspace (Juan Miguel Serrano's conflicted copy 2023-03-22).json
modeling/docs/attachments/: SolarMED_validation_20230703.html  SolarMED_validation_20231030.html  thermal_storage_validation_20231030_generated_20240307T1421.html
modeling/docs/models/: complete_system.md  solar_field.md  thermal_storage.md  three_way_valve.md
modeling/docs/old/: Optimization.md
modeling/issues/: report_caida_Tts.html
modeling/matlab_med_first_principles_model/: README.md
modeling/matlab_med_first_principles_model/calibration/: Efecto.m  NEA.m  Preheater.m  README.md  calculoUef.m  calculoUph_cls.m  calibration_model.m  condensador.m  efecto_1.m  efecto_i_flash.m  evaluacionPh.m  precalentador.m
modeling/matlab_med_first_principles_model/simulation/: Efecto2.m  Preheater2.m  anns_model_20220608.mat  anns_model_20220616.mat  anns_model_20221010.mat  condensador_with_over_cooling.m  demister.m  efecto_1_LIQ.m  efecto_i_flash2.m  effect_simulation_block.m  evaluate_trained_ann.m  pipe_losses.m  preheater_simulation_block.m  simulation_model.m
modeling/notebooks/: med_finite_state_machine.ipynb  sfts_finite_state_machine.ipynb  test_model.ipynb  validation_table.ipynb
modeling/notebooks/episode_state_evolution/: episode_state_evolution.ipynb
modeling/notebooks/model_calibrations/: electrical_consumption.ipynb  med_gpr.ipynb  med_keras.ipynb
modeling/notebooks/results/: MED_FSM_test_state_evolution.html  (+3 more)
modeling/old/: requirements_new.txt  test_combined_model.ipynb  test_individual_models.py
modeling/results/: benchmark_results.json
modeling/tests/: README.md
(+1111 files in other folders)
