[project]
name = "solarmed-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "loguru>=0.7.2",
    "lxml>=5.3.0",
    "pandas>=2.2.2",
    "phd-visualizations",
    "pydantic>=2.9.2",
    "pygmo>=2.19.5",
    "solarmed-modeling",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
solarmed-modeling = { git = "https://github.com/juan11iguel/solarMED-modeling", branch = "fsms" }
phd-visualizations = { git = "https://github.com/juan11iguel/phd_visualizations", branch = "main" }
