[project]
name = "solarmed-modeling"
version = "0.3.0"
description = "Repository with source code of a variety of models of a solar field - thermal storage and MED plant combined system at Plataforma Solar de Almería"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "cairosvg>=2.7.1",
    "gpy>=1.13.2",
    "hjson>=3.1.0",
    "loguru>=0.7.2",
    "lxml>=5.3.0",
    "matplotlib>=3.9.2",
    "optimparallel>=0.1.3",
    "pandas>=2.2.2",
    "phd-visualizations",
    "pydantic>=2.9.2",
    "seaborn>=0.13.2",
    "simple-pid>=2.0.1",
    "transitions[diagrams]>=0.9.3",
]

[project.optional-dependencies]
diagrams = [
    "transitions>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "med-model-r2023b",
]

[tool.uv.sources]
phd-visualizations = { git = "https://github.com/juan11iguel/phd_visualizations", rev = "6941be2d522d2c77bd74a05111c7f381d9df42eb" }
med-model-r2023b = { path = "matlab_med_first_principles_model/python_model_installers/linux_python311_for_redistribution_files_only" }